# ground_extractor_lib

./: CMakeLists.txt
example/: CMakeLists.txt  Galen_lvl5.pcd  Pixel_Lvl3_2609.pcd  extractorTest.cpp  extractor_test.cpp  settings.json
include/ground_extraction/: common_types.hpp  ground_extractor.hpp
src/: ground_extractor.cpp  internal_utils.cpp  internal_utils.hpp
